# w2t

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: web-deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
src/: main.rs
web/: Cargo.toml  index.html
web/src/: lib.rs
