[package]
name = "w2t-web"
version = "0.1.0"
edition = "2021"
description = "Web version of w2t - transparent PNG converter"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
w2t-core = { path = "../core" }
wasm-bindgen.workspace = true
js-sys = "0.3"
image.workspace = true
console_error_panic_hook.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "FileList", 
  "FileReader",
  "Blob",
]